Modified panel headings to have equal spacing (fixes #130)
I've set the sizing of both the summary
and the dropdown arrow in panel headers
to flexbox items, to allow the content
to be centered vertically in the header
box, and allow the summary to contain
multiple lines of text.

--- a/generator/scss/website.scss
+++ b/generator/scss/website.scss
@@ -225,6 +225,15 @@ ul.panel {
     margin: 1rem !important;
     padding: 0 !important;
   }
+  .collapsible-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem;
+  }
+  .panel-heading, .dropdown-menu-arrow {
+    line-height: 1.2rem;
+  }
 
   // Custom panel colours
   @include panel-color("panel-teacher-note", "blue");
